--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -338,7 +338,7 @@ form {
 }
 .abs-wrapper { width: 100%; height: 100%; position: relative; }
 
-#feed, #notifications {
+#feed, #feed-ext, #notifications, #conversation-list {
 	margin-top: 1.5em;
 	.post {
 		background-color: $overlay-color; margin: .25em 0; padding: .5em; color: #999;
@@ -354,6 +354,10 @@ form {
 		.header { color: #fff; font-weight: bold; }
 		.content { padding: .1em 1.5em; }
 		.footer { font-size: .8em; text-align: right; font-style: italic; }
+	}
+	&#conversation-list .post a {
+		color: #fff;
+		&:hover { text-decoration: none; }
 	}
 }
 
@@ -854,6 +858,24 @@ label.control-label + p.info { margin-top: -.4em; }
 			}
 			:last-child { border-bottom: 0; }
 		}
+	}
+
+}
+.search {
+	width: 100%; margin: 1em 0;
+	@media #{$mobile-bootstrap} { padding-right: 20px; }
+	::-webkit-input-placeholder { color: $placeholder-color !important; }
+	:-moz-placeholder { color: $placeholder-color !important; }
+	::-moz-placeholder { color: $placeholder-color !important; }
+	:-ms-input-placeholder { color: $placeholder-color !important; }
+
+	input[type="text"] {
+		width: calc(100% - 2em); background-color: #777; border: none; color: $nav-color !important;
+		padding: 0 .5em; margin-bottom: 2em; height: 2em;
+	}
+	.btn.btn-primary {
+		border: none; color: #fff; height: 2em; width: 2em; padding: 0; margin: 0; text-align: center;
+		&:hover, &:focus, &:active { color: $text-color; }
 	}
 }
 
