--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -465,6 +465,7 @@ a.accent:hover, a.accent:focus, a.accent:active { color: #bc3010; text-decoratio
 	.video-overlay {
 		width: 100%; height: 100%; position: absolute; background-color: #000; opacity: .8;top: 0; left: 0;
 		@media (max-width: 1190px) { height: 99%; }
+		@media #{$mobile} { opacity: .6; }
 	}
 	a.scrollDown {
 		animation: bouncing 1s infinite ease-in-out;
@@ -473,12 +474,13 @@ a.accent:hover, a.accent:focus, a.accent:active { color: #bc3010; text-decoratio
 		&:hover, &:active { color: $accent; }
 	}
 	.hero {
-		position: absolute; z-index: 1; top: 0; left: 0; right: 0; bottom: 0; width: 21em; height: 10em; margin: auto;
-		@media #{$mobile} { width: 14em; height: 7em; }
+		position: absolute; z-index: 1; top: 0; left: 0; right: 0; bottom: 0; width: 20.6em; height: 10em; margin: auto;
+		@media #{$mobile} { width: 13.7em; height: 7em; }
 		@media #{$tablet} {
 			h1 { font-size: 4em; }
 			p { font-size: 1.5em; }
 		}
+		.logo { width: 100%; }
 	}
 	video { width: 100%; }
 }
