--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -139,7 +139,7 @@ body {
 				&:hover, &:focus, &:active { color: $text-color; }
 			}
 		}
-		.notification-bubble, .friend-bubble {
+		.notification-bubble, .friend-bubble, message-bubble {
 			position: absolute; top: -5px; left: -5px; display: none; border-radius: 50%; padding: .1em; box-sizing: content-box;
 			background-color: $accent; color: #fff; font-size: .6em; line-height: 1em; height: 1em; width: 1em; text-align: center;
 		}
