--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -173,6 +173,7 @@ select { width: 100% !important; }
 .select2-dropdown,
 .select2-container,
 .select2-selection,
+.select2-search__field,
 .select2-selection.select2-selection--multiple {
 	background-color: #3a3b3e !important;
 }
